# can_serial

./: CMakeLists.txt  README.md  package.xml
include/can_serial/: CanSerialCore.hpp  CanSerialNode.hpp
scripts/: setup_can_autostart.sh
src/: CanSerialCore.cpp  CanSerialNode.cpp
