<?xml version="1.0"?>
<package format="2">
  <name>can_serial</name>
  <version>0.0.0</version>
  <description>NEUQ Mosas Aurus Team 2025 CAN Communication Code</description>
  <maintainer email="2890454691@qq.com">handshow</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <!-- <build_depend>boost</build_depend>
  <build_export_depend>boost</build_export_depend>
  <exec_depend>boost</exec_depend> -->

  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>

  </export>
</package>
